--- a/index.html
+++ b/index.html
@@ -365,7 +365,6 @@
                   <use href="./images/icons.svg#icon-name"></use>
                 </svg>
               </div>
-              
               </div>
             </label>
             <label for="phone" class="contact-form-item">
@@ -462,7 +461,7 @@
         </div>
         <div class="subscription">
           <h2 class="subscription-title">Подпишитесь на рассылку</h2>
-          <div class="subscription-form">
+            <form class="subscription-form">
             <label for="mail">
                 <input class="footer-mail" type="email" name="mail" placeholder="E-mail"/>
                 </label>
@@ -471,7 +470,7 @@
                   <svg class="icon-send" width="24" height="24">
                     <use href="./images/icons.svg#icon-send"></use>
                   </svg>
-                </div>
+                  </form>
               </div>
 
         </div>
