--- a/portfolio.html
+++ b/portfolio.html
@@ -251,7 +251,7 @@
         </div>
         <div class="subscription">
           <h2 class="subscription-title">Подпишитесь на рассылку</h2>
-          <div class="subscription-form">
+          <form class="subscription-form">
             <label for="mail">
                 <input class="footer-mail" type="email" name="mail" placeholder="E-mail"/>
                 </label>
@@ -260,7 +260,7 @@
                   <svg class="icon-send" width="24" height="24">
                     <use href="./images/icons.svg#icon-send"></use>
                   </svg>
-                </div>
+                  </form>
               </div>
         </div>
       </div>
