--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             <use href="./images/icons.svg#icon-x"></use>
           </svg>
         </button>
-        <section class="contact-form modal-container">
+        <section class="contact-form">
           <h2 class="contact-form-title">Оставьте свои данные, мы вам перезвоним</h2>
           <form class="contact-form-list">
             <label for="name" class="contact-form-item">
@@ -405,7 +405,6 @@
                 Соглашаюсь с рассылкой и принимаю <a href="" class="modal-link"> Условия договора</a></label>
               <button class="button primary mod" type="submit">Отправить</button>
             </form>
-
         </section>
       </div>
     </div>
@@ -460,7 +459,7 @@
           </ul>
         </div>
         <div class="subscription">
-          <h2 class="subscription-title">Подпишитесь на рассылку</h2>
+          <h3 class="subscription-title">Подпишитесь на рассылку</h3>
             <form class="subscription-form">
             <label for="mail">
                 <input class="footer-mail" type="email" name="mail" placeholder="E-mail"/>
